# usdr-lib

./: .gitignore  README.md  Taskfile.box.yaml  Taskfile.buildbox.yaml  Taskfile.yaml
src/: CMakeLists.txt  Changelog.txt
src/cmake/: FindLIBUSB_1.cmake  detect_arch.cmake  set_default_buildtype.cmake
src/dmonitor/: CMakeLists.txt  conn_pipe.py  pyqt5_widget.py  reg_parser.py  registers_widget.py  tcp_s_to_unix_c.py  unix_s_to_tcp_c.py  usdr_registers
src/dmonitor/yamls/: adf4002b.yaml  dac80501.yaml  ext_fe_100_5000.yaml  lmk04832.yaml  lmk05318.yaml  lmk5c33216.yaml  lms6002d.yaml  lms7002m.yaml  lms8001.yaml  lms8001_1.yaml  lms8001_2.yaml  lms8001_3.yaml  lms8001_4.yaml  lms8001_5.yaml  lp875484.yaml  m2_dsdr_e.yaml  m2_dsdr_p.yaml  m2_dsdr_usr.yaml  pciefe.yaml  pciefe_cmd.yaml  si5332.yaml  tca6424a.yaml  tps6381x.yaml  xra1405.yaml
src/hwparser/: gen_h.py  hwparser.cmake  pyqt5_widget.py  qt5reg_viewer.py  reg_parser.py
src/lib/: CMakeLists.txt
src/lib/cal/: CMakeLists.txt  cal_lo_iqimb.c  cal_lo_iqimb.h  opt_func.c  opt_func.h
src/lib/common/: CMakeLists.txt  clock_gen.c  clock_gen.h  parse_params.c  parse_params.h  ring_buffer.c  ring_buffer.h  ring_circbuf.c  ring_circbuf.h
src/lib/device/: 50-usdr-usb.rules  CMakeLists.txt  dev_param.h  device.c  device.h  device_bus.c  device_bus.h  device_cores.h  device_fe.c  device_fe.h  device_ids.h  device_impl.h  device_names.h  device_vfs.c  device_vfs.h  mdev.c  mdev.h
src/lib/device/ext_exm2pe/: CMakeLists.txt  board_exm2pe.c  board_exm2pe.h
src/lib/device/ext_fe_100_5000/: CMakeLists.txt  ext_fe_100_5000.c  ext_fe_100_5000.h  ext_fe_100_5000.yaml
src/lib/device/ext_pciefe/: CMakeLists.txt  ext_pciefe.c  ext_pciefe.h  pciefe.yaml  pciefe_cmd.yaml
src/lib/device/ext_simplesync/: CMakeLists.txt  ext_simplesync.c  ext_simplesync.h
src/lib/device/ext_supersync/: CMakeLists.txt  ext_supersync.c  ext_supersync.h
src/lib/device/ext_xmass/: CMakeLists.txt  ext_xmass.c  ext_xmass.h  ext_xmass_ctrl.yaml
src/lib/device/generic_usdr/: generic_regs.h
src/lib/device/m2_dsdr/: CMakeLists.txt  dsdr_hiper.c  dsdr_hiper.h  m2_dsdr.c  m2_dsdr.yaml  m2_dsdr_e.yaml  m2_dsdr_p.yaml  m2_dsdr_usr.yaml
src/lib/device/m2_lm6_1/: CMakeLists.txt  m2_lm6_1.c  usdr_ctrl.c  usdr_ctrl.h
src/lib/device/m2_lm7_1/: CMakeLists.txt  lms7002m_ctrl.c  lms7002m_ctrl.h  m2_lm7_1.c  m2_lm7_1.h  xsdr_ctrl.c  xsdr_ctrl.h
src/lib/device/m2_lsdr/: CMakeLists.txt  m2_da09_4_ad45_2.c
src/lib/device/pe_sync/: CMakeLists.txt  pe_sync.c  sync_const.h
src/lib/device/u3_limesdr/: CMakeLists.txt  limesdr_ctrl.c  limesdr_ctrl.h  u3_limesdr.c  u3_limesdr.h
src/lib/hw/: CMakeLists.txt
src/lib/hw/ad5662/: ad5662.c  ad5662.h  ad5662.yaml
src/lib/hw/adf4002b/: adf4002b.c  adf4002b.h  adf4002b.yaml
src/lib/hw/ads42lbx9/: ads42lbx9.c  ads42lbx9.h
src/lib/hw/afe79xx/: afe79xx.c  afe79xx.h  libcapi79xx_api.h
src/lib/hw/common/: common.c  common.h
src/lib/hw/dac80501/: dac80501.c  dac80501.h  dac80501.yaml
src/lib/hw/lmk04832/: lmk04832.c  lmk04832.h  lmk04832.yaml
src/lib/hw/lmk05318/: lmk05318.c  lmk05318.h  lmk05318.yaml  lmk05318_rom.h  lmk05318_solver.h
src/lib/hw/lmk1d1208i/: lmk1d1208i.c  lmk1d1208i.h  lmk1d1208i.yaml
src/lib/hw/lmk5c33216/: lmk5c33216.c  lmk5c33216.h  lmk5c33216.yaml  lmk5c33216_rom.h
src/lib/hw/lms6002d/: lms6002d.c  lms6002d.h  lms6002d.yaml
src/lib/hw/lms7002m/: lms7002m.c  lms7002m.h  lms7002m.yaml
src/lib/ipblks/: CMakeLists.txt  espi_flash.c  espi_flash.h  fgearbox.c  fgearbox.h  gpio.c  gpio.h  lms64c_cmds.h  lms64c_proto.c  lms64c_proto.h  mmcm_rom.h  si2c.c  si2c.h  spiext.c  spiext.h  uart.c  uart.h  xlnx_bitstream.c  xlnx_bitstream.h  xlnx_mmcm.c  xlnx_mmcm.h
src/lib/json_controller/: CMakeLists.txt  base64.h  controller.c  controller.h  controller_lime.c  controller_lime.h  controller_ugen.c  controller_ugen.h  controller_usdr.c  controller_xsdr.c
src/lib/lowlevel/: CMakeLists.txt  libusb_generic.c  libusb_generic.h  libusb_vidpid_map.h  usdr_lowlevel.c  usdr_lowlevel.h  webusb_generic.h
src/lib/models/: CMakeLists.txt  dm_all.h  dm_debug.c  dm_debug.h  dm_dev.c  dm_dev.h  dm_dev_impl.c  dm_dev_impl.h  dm_obj.c  dm_obj.h  dm_rate.c  dm_rate.h  dm_sdr.c  dm_sdr.h  dm_stream.c  dm_stream.h  dm_time.h
src/lib/port/: CMakeLists.txt  usdr_helpers.c  usdr_helpers.h  usdr_logging.c  usdr_logging.h  usdr_port.h
src/lib/webusb/: CMakeLists.txt  base64.c  controller.c  controller.h  controller_lime.c  controller_lime.h  controller_ugen.c  controller_ugen.h  controller_usdr.c  controller_usdr.h  controller_xsdr.c  controller_xsdr.h  test_webusb_libusb.c  test_webusb_wrapper.c  webusb.c  webusb.h
src/lib/xdsp/: CMakeLists.txt  attribute_switch.h  conv.c  conv.h  conv_2cf32_ci12_2.c  conv_2cf32_ci12_2.h  conv_2cf32_ci16_2.c  conv_2cf32_ci16_2.h  conv_2ci16_ci12_2.c  conv_2ci16_ci12_2.h  conv_2ci16_ci16_2.c  conv_2ci16_ci16_2.h  conv_4cf32_ci12_2.c  conv_4cf32_ci12_2.h  conv_4cf32_ci16_2.c  conv_4cf32_ci16_2.h  conv_4ci16_ci12_2.c  conv_4ci16_ci12_2.h  conv_4ci16_ci16_2.c  conv_4ci16_ci16_2.h  conv_ci12_2cf32_2.c  conv_ci12_2cf32_2.h  conv_ci12_2ci16_2.c  conv_ci12_2ci16_2.h  conv_ci12_4cf32_2.c  conv_ci12_4cf32_2.h  conv_ci12_4ci16_2.c  conv_ci12_4ci16_2.h  conv_ci16_2cf32_2.c  conv_ci16_2cf32_2.h  conv_ci16_2ci16_2.c  conv_ci16_2ci16_2.h  conv_ci16_4cf32_2.c  conv_ci16_4cf32_2.h  conv_ci16_4ci16_2.c  conv_ci16_4ci16_2.h  conv_f32_i12_2.c  conv_f32_i12_2.h  conv_f32_i16_2.c  conv_f32_i16_2.h  (+34 more)
src/soapysdr/: CMakeLists.txt  test_usdr_soapy.c  usdr_soapy.cpp  usdr_soapy.h  usdr_soapy_reg.cpp
src/tests/: CMakeLists.txt  lms7_cal.c  lowlevel_lvds_perf.c  simpleapi.c  simpleapi.h  usdr_dm_calibrate.c  usdr_simple_api_test.c
src/tools/: CMakeLists.txt  lms7002_dm_limelight.c  usdr_dm_create.c  usdr_dm_sensors.c  usdr_flash.c  wvlt_sdr_wrapper.py
src/utests/: CMakeLists.txt  clockgen_test.c  lmk05318_solver_test.c  lmk05318_test.c  lmx1204_solver_test.c  lmx1214_solver_test.c  lmx2820_solver_test.c  mock_lowlevel.c  mock_lowlevel.h  ring_buffer_test.c  test_suite.c  trig_test.c
(+324 files in other folders)
